# streamlit-textcomplete

./: .gitignore  .pre-commit-config.yaml  .renovaterc.json  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: lint.yml  release.yml  test.yml
e2e/: e2e_utils.py  test_rxdb_dataframe.py  test_rxdb_textcomplete.py
tests/: test_textcomplete.py
textcomplete/: __init__.py  example.py  test___init__.py
textcomplete/frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  project.json  rspack.config.js
textcomplete/frontend/patches/: @textcomplete+textarea+0.1.13.patch
textcomplete/frontend/src/: emoji.js  helpers.js  index.js  streamlit.d.ts  streamlit.js
